# Project-Eva

./: .env.example  .gitignore  Implementation.md  LICENSE  README.md  install-audio-emotion.sh  install-kokoro-local.sh  install-kokoro-tts.sh  install-local-audio.sh  install-ollama.sh  install.sh  package-lock.json  package.json  requirements-kokoro.txt  requirements.txt  run.py  setup.py  start.sh  test_audio_services.py  test_calendar_service.py  test_llm_service.py  verify.py
backend/: main.py  main_config.py  pyproject.toml
backend/prompts/: personal_assistant_system_prompt.md
backend/skills/: README.md
backend/skills/code-review/: SKILL.md
backend/skills/emotional_context_skill/: skill.md
backend/src/: deps.py
backend/src/agent_orchestrator/: README.md  __init__.py  api.py  builtin_tools.py  config.py  context_summary.py  db.py  llm.py  loop.py  models.py  session_store.py  system_prompt_loader.py  tool_registry.py  tools.py
backend/src/agent_orchestrator/providers/: __init__.py  base.py  gemini_provider.py
backend/src/eva_memory/: README.md  __init__.py  _llm.py  categories.py  config.py  engine.py  llm_client.py  memory_client.py  models.py  prompts.py  smoke_test.py
backend/src/eva_memory/docs/: GUIDE.md
backend/src/eva_memory/embeddings/: __init__.py  base.py  ollama.py  openai_embedding.py
backend/src/eva_memory/persistence/: sqlite.py
backend/src/llm_core/: __init__.py  config.py  core.py  models.py
backend/src/routers/: __init__.py  chat.py
backend/temp/: check_eva_memory.ipynb
backend/tests/: __init__.py  test_eva_memory.py
(+116 files in other folders)
